GNOME Bugzilla – Bug 708079
Clutter clutter-1.16 branch fails to commit after commit da3e6988ad7259e65bbb051589c1adb0d11421d0
Last modified: 2013-09-15 09:42:19 UTC
Hi. I am trying to compile clutter for Wayland. it seems da3e6988ad7259e65bbb051589c1adb0d11421d0 has broken the compile, but mutter wayland appears to depend on it. I am compiling clutter with ./autogen.sh --prefix=$INSTALLDIR --libdir=$INSTALLDIR/lib/$(dpkg-architecture -qDEB_HOST_MULTIARCH) --enable-wayland-backend --enable-wayland-compositor --with-flavour=wayland --enable-evdev-input And the error I am getting is ./evdev/clutter-device-manager-evdev.c:669:7: warning: 'LIBEVDEV_READ_NORMAL' is deprecated (declared at /opt/include/libevdev-1.0/libevdev/libevdev.h:1407) [-Wdeprecated-declarations] err = libevdev_next_event (source->dev, LIBEVDEV_READ_NORMAL, &ev); ^ CC clutter-actor-meta.lo CC clutter-actor.lo CC clutter-align-constraint.lo CC clutter-animatable.lo CC clutter-backend.lo CC clutter-base-types.lo CC clutter-bezier.lo ./clutter-backend.c: In function 'clutter_backend_real_init_events': ./clutter-backend.c:566:40: error: 'CLUTTER_WINDOWING_EGL' undeclared (first use in this function) clutter_check_windowing_backend (CLUTTER_WINDOWING_EGL)) ^ ./clutter-backend.c:566:40: note: each undeclared identifier is reported only once for each function it appears in make[2]: *** [clutter-backend.lo] Error 1 make[2]: *** Waiting for unfinished jobs.... make[2]: Leaving directory `/srcbuild/clutter/clutter' make[1]: *** [all] Error 2 make[1]: Leaving directory `/srcbu
you need --enable-egl-backend as well, otherwise the --enable-wayland-compositor configure switch will be ignored. should probably tweak the configure.
actually, no: it was easier than that. we should just not unconditionally use symbols that are conditionally defined.