backend: Do not use CLUTTER_WINDOWING_EGL unconditionally

https://bugzilla.gnome.org/show_bug.cgi?id=708079